# Function-Test-Suite

./: .gitignore  CMakeLists.txt  CMakePresets.json
BATS/: FunctionAbstraction.h  FunctionTraits.h
BATS/Support/: FunctionTraits.h  Results.h  Supporting.h
src/: FunctionAbstraction.h  MatrixAbstraction.h  PrintAbstraction.h  TypeAbstract.h  VectorAbstraction.h  main.cpp
